<resources>
    <string name="app_name">Restaurant Buddy</string>
    <string name="title_activity_main">Restaurant Buddy</string>
    <string name="facebook_app_id">1714508218772670</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Register here!</string>
    <string name="register_2">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="add_place">Add place</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email Address</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="my_places">My Places</string>
    <string name="add_places">Add Places</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="track_delivery">Track Delivery</string>
    <string name="track">Track</string>
    <string name="order_number">Order Number e.g 008</string>
    <string name="current_location">Current location</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_details2">DetailsActivity2</string>
    <string name="title_activity_track_delivery">TrackDelivery</string>
    <string name="title_activity_gps">GPSActivity</string>
</resources>
