<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".LoginActivity">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/home_icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Footer -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <!-- Login submit button -->
        <LinearLayout
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="0dp"
            android:textSize="20sp"
            android:weightSum="1.0">
            <Button
                android:id="@+id/login_button_submit"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="login"/>
        </LinearLayout>
    </RelativeLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/username"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

</RelativeLayout>
