<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context="com.cos790.internetofthings.restaurantbuddy.TrackDeliveryActivity">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="0dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/track_delivery"
                android:textColor="#000"
                android:textSize="30sp"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- Footer -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/order_code"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/order_number"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <!-- Footer -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:gravity="center">

        <!-- Track -->
        <LinearLayout
            android:id="@+id/track_order_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity = "center_horizontal"
            android:weightSum="1.0"
            android:layout_margin="10dp"
            android:padding="0dp">
            <Button
                android:id="@+id/track_order_button"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/track"
                android:layout_weight="0.7"
                android:background="@drawable/bg_button_rounded"
                android:onClick="track"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>