<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".MainActivity">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:background="@drawable/bg_gradient"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:padding="0dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_3"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="30sp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <EditText
        android:id="@+id/login_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:hint="@string/username"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/black"/>
    </RelativeLayout>

    <!-- Footer -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:gravity="center">

        <!-- Login -->
        <LinearLayout
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity = "center_horizontal"
            android:weightSum="1.0"
            android:layout_margin="10dp"
            android:padding="0dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:layout_weight="0.7"
                android:background="@drawable/bg_button_rounded" />
        </LinearLayout>

        <!-- Login with facebook -->
        <LinearLayout
            android:id="@+id/facebook_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:layout_below="@id/login"
            android:weightSum="1.0"
            android:layout_margin="10dp"
            android:padding="0dp">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_weight="0.7" />
        </LinearLayout>

        <!-- Register -->
        <!--<LinearLayout-->
            <!--android:id="@+id/register"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity = "center_horizontal"-->
            <!--android:layout_below="@id/facebook_login"-->
            <!--android:weightSum="1.0"-->
            <!--android:layout_margin="10dp"-->
            <!--android:padding="0dp">-->
            <!--<Button-->
                <!--android:id="@+id/register_button"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="60dp"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@color/white"-->
                <!--android:text="@string/register"-->
                <!--android:layout_weight="0.7"-->
                <!--android:background="@drawable/bg_button_rounded"/>-->
        <!--</LinearLayout>-->

    </RelativeLayout>

</RelativeLayout>
